# DepressionPredictor

./: .gitignore  README.md  pyproject.toml
doc/: 多模态数据的统计挖掘与抑郁倾向预测研究.pptx  答辩稿.docx
src/: TF-IDF-BERT.py  VADER.py  main.py
