[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "emoji>=2.14.1",
    "imblearn>=0.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "nn>=0.1.1",
    "pandas>=2.3.0",
    "scikit-learn==1.0.2",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "torch>=2.7.1",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.52.4",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
