[project]
name = "multimodal-depression-predictor"
version = "0.1.0"
description = "多模态抑郁倾向预测项目"
authors = [{name = "User", email = "user@example.com"}]
dependencies = [
    # 核心数据处理与科学计算
    "pandas",
    "numpy",
    "scikit-learn",
    
    # 深度学习框架 (重要: 不指定URL，让uv自己去额外索引源查找)
    "torch",
    "torchaudio",
    "torchvision",
    
    # NLP 和文本处理
    "transformers",
    "nltk",
    "emoji",
    
    # 模型可解释性
    "shap",
    
    # 采样处理不平衡数据
    "imbalanced-learn", # 使用更规范的包名
    
    # 可视化
    "matplotlib",
    "seaborn",
]
requires-python = ">=3.8,<3.13"
license = "MIT"

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]

[tool.uv.scripts]
start = "python src/main.py"